Fixed layout issue causing horizontal scrolling

--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,5 +1,5 @@
 .upper-home-left-bottom p:nth-child(1) {
-  @apply text-[#408A7E] text-2xl font-bold mb-5 font-dmsans
+  @apply text-[#408A7E] text-2xl font-bold mb-5 font-dmsans my-5
 }
 
 .upper-home-left-bottom p:nth-child(2) {
